# hybrid-poc

./: README.md
aiphas/: README.md  pyproject.toml
aiphas-app/: Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
aiphas-app/backend/: README.md  server.js
aiphas-app/backend/config/: db.js
aiphas-app/backend/controllers/: patientController.js  userController.js
aiphas-app/backend/middleware/: README.md  authMiddleware.js  errorMiddleware.js
aiphas-app/backend/models/: patientModel.js  userModel.js
aiphas-app/backend/routes/: patientRoutes.js  userRoutes.js
aiphas-app/frontend/: Dockerfile  README.md  package-lock.json  package.json
aiphas-app/frontend/public/: index.html
aiphas-app/frontend/src/: App.js  index.css
aiphas-app/frontend/src/app/: store.js
aiphas-app/frontend/src/components/: Header.jsx  PatientForm.jsx  PatientItem.jsx  Spinner.jsx
aiphas-app/frontend/src/features/auth/: authService.js  authSlice.js
aiphas-app/frontend/src/features/patients/: patientService.js  patientSlice.js
aiphas-app/frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
aiphas-app/nginx/: default.conf
aiphas/_grpc/: Makefile  README.md  client.py  server.py
aiphas/_grpc/proto/: api.proto
