[tool.poetry]
name = "aiphas"
version = "0.1.0"
description = "hybrid architecture poc"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.53.0"
grpcio-tools = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
